[PN-15408] feat: fixed sonar issue